# rogue5.4

./: .gitignore  CMakeLists.txt  Makefile  chase.cpp  command.cpp  config.h  daemon.cpp  daemons.cpp  extern.h  init.cpp  instructions.md  list.cpp  mach_dep.cpp  main.cpp  misc.cpp  monsters.cpp  new_level.cpp  pack.cpp  potions.cpp  rip.cpp  rogue.h  rogue54.sln  rogue54.vcxproj  rogue54.vcxproj.filters  state.cpp  vers.cpp
levels/: level1.txt
stubs/: curses.cpp  curses.h  term.h
